# Serenity-source

./: README.md
Serenity/: .gitignore  External.hs  Makefile  README  Serenity.cabal  build.xml
Serenity/resources/fleets/: default.fleet
Serenity/resources/templates/ships/: corvette.yml  destroyer.yml  dreadnought.yml
Serenity/resources/templates/systems/: ShieldBoost.yml
Serenity/resources/templates/weapons/: laser.yml  rockets.yml
Serenity/src/: AssetsManager.hs  Log.hs  Main.hs  Main.hs.orig  Paths.hs  StateSwitcher.hs
Serenity/src/Serenity/: Debug.hs  External.hs  Model.hs  Network.hs  Sheen.hs
Serenity/src/Serenity/AI/: Navigation.hs  Path.hs  Plan.hs  Plan2.hs  SectorGraph.hs  Targeting.hs
Serenity/src/Serenity/Extensions/: Vinyl.hs
Serenity/src/Serenity/Game/: GameModel.hs  ShipClass.hs  ShipModel.hs
Serenity/src/Serenity/Game/Client/: Assets.hs  ClientMessage.hs  ClientState.hs  Color.hs  Common.hs  Controller.hs  GUI.hs  Graphics.hs  InputFilter.hs  KeyboardState.hs  Logic.hs  Main.hs  UIState.hs  World.hs
Serenity/src/Serenity/Game/Client/MenuStates/: MainMenuState.hs  MainMenuState.hs.orig
Serenity/src/Serenity/Game/Model/: ClientMessage.hs  Common.hs  Entity.hs  GameMap.hs  GameState.hs  ShipClass.hs  ShipOrder.hs  WorldDelta.hs
Serenity/src/Serenity/Game/Server/: Assets.hs  ClientData.hs  Demo.hs  EntityController.hs  Game.hs  GameModel.hs  GameRunner.hs  GameState.hs  GameStateTransform.hs  GameSupervisor.hs  Graphics.hs  Gravity.hs  InputFilter.hs  KeyboardState.hs  Listener.hs  Main.hs  Math.hs  Network.hs  PrototypeWorld.hs  Server.hs  Server2.hs  World.hs
Serenity/src/Serenity/Game/Server/SimpleNetwork/: Receiver.hs  Sender.hs
Serenity/src/Serenity/Game/Shared/: GameStateUpdate.hs
Serenity/src/Serenity/Game/Shared/Model/: ClientMessage.hs  Common.hs  Entity.hs  GameMap.hs  GameState.hs  ShipClass.hs  ShipOrder.hs  WorldDelta.hs
Serenity/src/Serenity/Game/UI/: Application.hs  Credits.hs  End.hs  Fleet.hs  FleetBuilder.hs  Host.hs  Join.hs  Lobby.hs  Main.hs  Menu.hs  Minimap.hs  Play.hs  Quick.hs  Splash.hs
Serenity/src/Serenity/Game/World/: World.hs
Serenity/src/Serenity/Graphics/: MainInterface.hs  Minimap.hs
Serenity/src/Serenity/Maths/: Bezier.hs  Util.hs  Vector.hs
Serenity/src/Serenity/Misc/: GameNameGenerator.hs  VideoGameNames.hs
Serenity/src/Serenity/Model/: Common.hs  Entity.hs  Fleet.hs  Formation.hs  Game.hs  Message.hs  Plan.hs  Sector.hs  Ship.hs  Time.hs  Wire.hs
Serenity/src/Serenity/Network/: Connection.hs  Message.hs  Packet.hs  Server.hs  Transport.hs  Utility.hs
Serenity/src/Serenity/Sheen/: IO.hs  UIEvent.hs  Util.hs  View.hs  Views.hs
Serenity/src/Serenity/Sheen/Views/: Button.hs  Label.hs  PictureView.hs  Table.hs  TextBox.hs
Serenity/tests/: Main.hs
Serenity/tests/Test/Serenity/: Network.hs
Serenity/tests/Test/Serenity/Game/Client/: KeyboardState.hs
Serenity/tests/Test/Serenity/Game/Server/: GameStateTransform.hs  Main.hs  Network.hs
Serenity/tests/Test/Serenity/Game/Shared/: GameStateUpdate.hs
Serenity/tests/Test/Serenity/Maths/: Util.hs
Serenity/tests/Test/Serenity/Model/: Message.hs
Serenity/tests/Test/Serenity/Network/: Message.hs  Packet.hs  Transport.hs  Utility.hs
