name:          Serenity
version:       0.1
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.9.2
data-dir:      resources
data-files:    templates/ships/*.yml, templates/systems/*.yml, templates/textures/*.bmp, templates/weapons/*.yml

executable serenity
    main-is:        Main.hs
    build-depends:   
        base,
        easy-file == 0.1.1,
        stm,
        mtl,
        unix,
        network >= 2.4.1.0,
        bytestring,
        binary,
        binary-strict,
        time,
        containers >= 0.5.0.0,
        lens == 3.8.5,
        vector-space == 0.8.4,
        parsec,
        deepseq,
        array,
        astar == 0.2.1,
        gloss == 1.7.7.1,
        netwire == 4.0.7,
        derive,
        parallel == 3.2.0.3,
        parseargs == 0.1.3.2,
        template-haskell,
        random == 1.0.1.1,
        QuickCheck,
        yaml-light == 0.1.4,
        pretty-show == 1.5
    hs-source-dirs: src
    ghc-options:    -W -threaded -rtsopts
    extensions: TemplateHaskell DoAndIfThenElse

Test-Suite test-serenity
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    build-depends:  
        base,
        test-framework,
        test-framework-quickcheck2,
        test-framework-hunit,
        QuickCheck,
        HUnit,
        derive,
        easy-file == 0.1.1,
        stm,
        mtl,
        unix,
        network >= 2.4.1.0,
        bytestring,
        binary,
        binary-strict,
        time,
        containers >= 0.5.0.0,
        lens == 3.8.5,
        vector-space == 0.8.4,
        parsec,
        deepseq,
        array,
        astar == 0.2.1,
        gloss == 1.7.7.1,
        netwire == 4.0.7,
        parseargs == 0.1.3.2,
        parallel == 3.2.0.3,
        template-haskell,
        random == 1.0.1.1,
        yaml-light == 0.1.4,
        pretty-show == 1.5
    hs-source-dirs: tests, src
    ghc-options:    -W -threaded -rtsopts 
    extensions: TemplateHaskell DoAndIfThenElse
