name:          Serenity
version:       0.1
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.9.2
data-dir:      resources
data-files:    templates/ships/*.yml, templates/systems/*.yml, templates/textures/*.bmp, templates/weapons/*.yml

executable serenity
    main-is:        Main.hs
    build-depends:   
        base == 4.6.0.0,
        easy-file == 0.1.1,
        stm == 2.4.2,
        mtl == 2.1.2,
        split == 0.2.1.1,
        unix == 2.6.0.0,
        network >= 2.4.1.0,
        bytestring == 0.10.0.0,
        binary == 0.5.1.1,
        binary-strict == 0.4.8,
        time == 1.4.0.1,
        containers >= 0.5.0.0,
        lens == 3.8.5,
        vector-space == 0.8.4,
        parsec == 3.1.3,
        deepseq == 1.3.0.1,
        array == 0.4.0.1,
        astar == 0.2.1,
        gloss == 1.7.7.1,
        colour == 2.3.3,
        netwire == 4.0.7,
        derive == 2.5.11,
        parallel == 3.2.0.3,
        parseargs == 0.1.3.2,
        template-haskell,
        random == 1.0.1.1,
        random-extras == 0.19,
        random-fu == 0.2.4.0,
        QuickCheck,
        yaml-light == 0.1.4,
        pretty-show == 1.5
    hs-source-dirs: src
    ghc-options:    -threaded -rtsopts -fwarn-incomplete-patterns -fwarn-dodgy-exports -fwarn-dodgy-imports -fwarn-unused-imports
    extensions: TemplateHaskell

Test-Suite test-serenity
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    build-depends:  
        base == 4.6.0.0,
        test-framework,
        test-framework-quickcheck2,
        test-framework-hunit,
        QuickCheck,
        HUnit,
        derive == 2.5.11,
        easy-file == 0.1.1,
        stm == 2.4.2,
        mtl == 2.1.2,
        unix == 2.6.0.0,
        network >= 2.4.1.0,
        bytestring,
        binary == 0.5.1.1,
        binary-strict == 0.4.8,
        time == 1.4.0.1,
        containers >= 0.5.0.0,
        lens == 3.8.5,
        vector-space == 0.8.4,
        parsec == 3.1.3,
        deepseq == 1.3.0.1,
        array == 0.4.0.1,
        astar == 0.2.1,
        gloss == 1.7.7.1,
        netwire == 4.0.7,
        parseargs == 0.1.3.2,
        parallel == 3.2.0.3,
        template-haskell,
        random == 1.0.1.1,
        yaml-light == 0.1.4,
        pretty-show == 1.5
    hs-source-dirs: tests, src
    ghc-options:    -W -threaded -rtsopts 
    extensions: TemplateHaskell DoAndIfThenElse
