name:          Serenity
version:       0.1
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.9.2

data-dir: resources
data-files:
    templates/ships/*.yml
    templates/systems/*.yml
    templates/textures/*.bmp
    templates/weapons/*.yml
    fleets/*.fleet

executable serenity
    main-is:        Main.hs
    build-depends:   
        base,
        easy-file == 0.1.1,
        stm,
        mtl,
        split == 0.2.1.1,
        unix,
        network >= 2.4.1.0,
        bytestring,
        binary,
        binary-strict,
        time,
        containers >= 0.5.0.0,
        lens == 3.8.5,
        vector-space == 0.8.4,
        parsec,
        deepseq,
        array,
        astar,
        gloss == 1.7.7.1,
        colour == 2.3.3,
        netwire == 4.0.7,
        derive,
        parseargs == 0.1.3.2,
        template-haskell,
        random == 1.0.1.1,
        random-extras == 0.19,
        random-fu == 0.2.4.0,
        QuickCheck,
        yaml-light == 0.1.4
    hs-source-dirs: src
    ghc-options:    -threaded -rtsopts -fwarn-incomplete-patterns -fwarn-dodgy-exports -fwarn-dodgy-imports -fwarn-unused-imports
    extensions: TemplateHaskell

Test-Suite test-serenity
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    build-depends:  
        base,
        test-framework,
        test-framework-quickcheck2,
        test-framework-hunit,
        QuickCheck,
        HUnit,
        derive,
        easy-file == 0.1.1,
        stm,
        mtl,
        unix,
        network >= 2.4.1.0,
        bytestring,
        binary,
        binary-strict,
        time,
        containers >= 0.5.0.0,
        lens == 3.8.5,
        vector-space == 0.8.4,
        parsec,
        deepseq,
        array,
        astar,
        gloss == 1.7.7.1,
        netwire == 4.0.7,
        parseargs == 0.1.3.2,
        template-haskell,
        random == 1.0.1.1,
        yaml-light == 0.1.4
    hs-source-dirs: tests, src
    ghc-options:    -W -threaded -rtsopts
    extensions: TemplateHaskell
